# untitled-fps

./: .gitmodules  CMakeLists.txt
src/client/: input.c  input.h  main.c  mesh.c  mesh.h  shader.c  shader.h
src/client/math/: mat4.c  mat4.h  vec3.c  vec3.h
src/client/meshes/: player_mesh.c  player_mesh.h  quad.c  quad.h  wall.c  wall.h
src/client/shaders/: entity.frag  entity.vert  quad.vert
src/common/: map.c  map.h  monster.c  monster.h  network.c  network.h  player.c  player.h  time.c  time.h
src/common/math/: mat4.h  vec3.h
src/server/: main.c
